--- a/2026-02-09-Nerdbank.GitVersioning/2026-02-09-Nerdbank.GitVersioning.csproj
+++ b/2026-02-09-Nerdbank.GitVersioning/2026-02-09-Nerdbank.GitVersioning.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net10.0</TargetFramework>
+    <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <RootNamespace>_2026_02_09_Nerdbank.GitVersioning</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
