--- a/2026-02-09-Nerdbank.GitVersioning/2026-02-09-Nerdbank.GitVersioning.csproj
+++ b/2026-02-09-Nerdbank.GitVersioning/2026-02-09-Nerdbank.GitVersioning.csproj
@@ -5,10 +5,10 @@
     <TargetFrameworks>net8.0;net9.0</TargetFrameworks>
     <RootNamespace>_2026_02_09_Nerdbank.GitVersioning</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
-    <!-- <PackAsTool>true</PackAsTool> -->
-    <!-- <GeneratePackageOnBuild>true</GeneratePackageOnBuild> -->
+    <PackAsTool>true</PackAsTool>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
     <Nullable>enable</Nullable>
-    <!-- <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies> -->
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
